fixes #2683 - Custom location page: support multiple source & Data link                     - fix data links                     - add more spacing inside the source info popup

--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/country/custom/country-custom.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/country/custom/country-custom.less
@@ -33,6 +33,14 @@
 .map-info.legend.source-list {
   position: absolute;
   z-index: 1000;
+
+  div {
+    margin-top: 10px;
+    &:first-child{
+      margin-top: 0px;
+    }
+  }
+
 }
 a:hover > .source-list {
   display: block !important;
